# textual-demo

./: README.md  pyproject.toml
textual_demo/: demo.py  demo.tcss
