[tool.poetry]
name = "textual-demo"
version = "0.1.0"
description = ""
authors = ["Isaac.Spencer <isaac.spencer@niar.wichita.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.47.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
